  original, current and new state documents.

- Feature: Conflicts are now detected while aborting a transaction. The
  implemented policy will not reset the document state, if a conflict is
  detected.

- Feature: Provide a flag to turn on MongoDB access logging. The flag is false
  by default, since access logging is very expensive.

- Feature: Added transaction ID to LoggingDecorator.

- Performance: Drastically improved performance for collections that store
  only one type of objects and where the documents do not store the type
  (i.e. it is stored in the name map collection).

- Performance: The Zope Container fast load via find() did not work correctly,
  since setstate() did not change the state from ghost to active and thus the
  state was loaded again from MongoDB and set on the object. Now we use the
  new ``_latest_states`` cache to lookup a document when ``setstate()`` is
  called through the proper channels.

- Bug: We have seen several occasions in production where we suddenly lost
  some state in some documents, which prohibited the objects from being
  loadable again. The cause was that the ``_original_states`` attribute did not
  store the raw MongoDB document, but a modified one. Since those states are
  used during abort to reset the state, however, the modified document got
  stored making the affected objects inaccessible.

- Bug: When a transaction was aborted, the states of all *loaded* objects were
  reset. Now, only *modified* object states are reset. This should drastically
  lower problems (by the ratio of read over modified objects) due to lack of
  full MVCC.


0.6.1 (2012-03-28)
------------------

- Feature: Added quite detailed debug logging around collection methods

0.6.0 (2012-03-12)
------------------

- Feature: Switched to optimisitc data dumping, which approaches transactions
  by dumping early and as the data comes. All changes are undone when the
  transaction fails/aborts. See ``optimistic-data-dumping.txt`` for