@@ -49,4 +49,8 @@ setup (
     ],
     include_package_data = True,
     zip_safe = False,
+    entry_points = '''
+    [console_scripts]
+    profile = mongopersist.performance:main
+    ''',
     )
